Added Clients Form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <mat-drawer-container>
     <mat-drawer mode="side" opened>
-      <div class="d-flex align-items-start flex-column">
+      <div class="d-flex align-items-start flex-column min-vh-50">
         <app-sidebar></app-sidebar>
       </div>
     </mat-drawer>
