--- a/src/app/modules/clients/components/clients-dashboard/clients-dashboard.component.html
+++ b/src/app/modules/clients/components/clients-dashboard/clients-dashboard.component.html
@@ -1,8 +1,92 @@
-<p>Clients Dashboard works!</p>
-<ul class="list-group">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-  <li class="list-group-item">A fourth item</li>
-  <li class="list-group-item">And a fifth one</li>
-</ul>
+<div class="container p-3 border border-secondary">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <button type="button" class="btn btn-primary mx-2">New</button>
+
+        <button type="button" class="btn btn-primary mx-2">Export</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Enter shared key"
+        />
+        <button type="button" class="btn btn-primary mx-2">Search</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid p-3 border border-primary">
+    <form>
+      <div class="mb-3">
+        <label for="name" class="form-label">Name</label>
+        <input type="text" class="form-control" id="name" name="name" />
+      </div>
+      <div class="mb-3">
+        <label for="phone" class="form-label">Phone</label>
+        <input type="tel" class="form-control" id="phone" name="phone" />
+      </div>
+      <div class="mb-3">
+        <label for="email1" class="form-label">Email</label>
+        <input type="email" class="form-control" id="email1" name="email1" />
+      </div>
+      <div class="mb-3">
+        <label for="startdate" class="form-label">Start date</label>
+        <input
+          type="date"
+          class="form-control"
+          id="startdate"
+          name="startdate"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="enddate" class="form-label">End date</label>
+        <input type="date" class="form-control" id="enddate" name="enddate" />
+      </div>
+      <button type="submit" class="btn btn-primary">OK</button>
+    </form>
+  </div>
+</div>
+
+<div class="container p-3 border border-secondary">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-100">
+    <ng-container matColumnDef="shared_key">
+      <th mat-header-cell *matHeaderCellDef>Shared Key</th>
+      <td mat-cell *matCellDef="let element">{{ element.shared_key }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="business_id">
+      <th mat-header-cell *matHeaderCellDef>Business ID</th>
+      <td mat-cell *matCellDef="let element">{{ element.business_id }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef>Email</th>
+      <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="phone">
+      <th mat-header-cell *matHeaderCellDef>Phone</th>
+      <td mat-cell *matCellDef="let element">{{ element.phone }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="data_added">
+      <th mat-header-cell *matHeaderCellDef>Data Added</th>
+      <td mat-cell *matCellDef="let element">{{ element.data_added }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="edit">
+      <th mat-header-cell *matHeaderCellDef>Edit</th>
+      <td mat-cell *matCellDef="let element">edit</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
