--- a/src/app/modules/clients/components/clients-dashboard/clients-dashboard.component.html
+++ b/src/app/modules/clients/components/clients-dashboard/clients-dashboard.component.html
@@ -27,8 +27,10 @@
         <div class="input-group">
           <input
             type="text"
+            [(ngModel)]="inputKeyword"
             class="form-control"
             placeholder="Enter shared key"
+            (keyup)="searchKeyword()"
           />
           <button type="button" class="btn btn-primary mx-2">Search</button>
         </div>
@@ -38,14 +40,14 @@
 
   <div class="container p-3 border border-secondary">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-100">
-      <ng-container matColumnDef="shared_key">
+      <ng-container matColumnDef="sharedKey">
         <th mat-header-cell *matHeaderCellDef>Shared Key</th>
-        <td mat-cell *matCellDef="let element">{{ element.shared_key }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.sharedKey }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="business_id">
+      <ng-container matColumnDef="businessId">
         <th mat-header-cell *matHeaderCellDef>Business ID</th>
-        <td mat-cell *matCellDef="let element">{{ element.business_id }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.businessId }}</td>
       </ng-container>
 
       <ng-container matColumnDef="email">
@@ -58,14 +60,16 @@
         <td mat-cell *matCellDef="let element">{{ element.phone }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="data_added">
+      <ng-container matColumnDef="dataAdded">
         <th mat-header-cell *matHeaderCellDef>Data Added</th>
-        <td mat-cell *matCellDef="let element">{{ element.data_added }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.dataAdded }}</td>
       </ng-container>
 
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef>Edit</th>
-        <td mat-cell *matCellDef="let element">edit</td>
+        <td mat-cell *matCellDef="let element">
+          <mat-icon fontIcon="edit"></mat-icon>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
