--- a/src/app/modules/clients/components/clients-dashboard/clients-dashboard.component.html
+++ b/src/app/modules/clients/components/clients-dashboard/clients-dashboard.component.html
@@ -30,9 +30,14 @@
             [(ngModel)]="inputKeyword"
             class="form-control"
             placeholder="Enter shared key"
-            (keyup)="searchKeyword()"
           />
-          <button type="button" class="btn btn-primary mx-2">Search</button>
+          <button
+            type="button"
+            (click)="searchKeyword()"
+            class="btn btn-primary mx-2"
+          >
+            Search
+          </button>
         </div>
       </div>
     </div>
@@ -60,9 +65,9 @@
         <td mat-cell *matCellDef="let element">{{ element.phone }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="dataAdded">
+      <ng-container matColumnDef="dateAdded">
         <th mat-header-cell *matHeaderCellDef>Data Added</th>
-        <td mat-cell *matCellDef="let element">{{ element.dataAdded }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.dateAdded }}</td>
       </ng-container>
 
       <ng-container matColumnDef="edit">
