Refactor Clients Module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     </mat-drawer>
     <mat-drawer-content>
       <div class="container">
-        <app-clients-dashboard></app-clients-dashboard>
+        <router-outlet></router-outlet>
       </div>
     </mat-drawer-content>
   </mat-drawer-container>
