--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="navbar-collapse">
-    <div class="navbar-nav">
+    <div class="navbar-nav bg-light">
       <a
         class="nav-link active"
         routerLink="/clients"
