--- a/src/app/modules/clients/components/clients-dashboard/clients-dashboard.component.html
+++ b/src/app/modules/clients/components/clients-dashboard/clients-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container p-3 border border-secondary">
+<div class="container p-3 border border-secondary bg-light-subtle">
   <div class="container-fluid">
     <div class="row">
       <div class="col">
